# SensorAnalysis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.h.cmakein  resource.qrc
app/include/: SeriesDataRef.h  curvecustomplot.h  dataloader.h  dataloadercsv.h  filtertreeview.h  filterviewwidget.h  loaderviewwidget.h  mainwindow.h  menuanimatwidget.h  mimedata.h  plotcursor.h  plotcurvecolor.h  plotdockerwidget.h  plotfft.h  plotwidget.h  pluginInterface.h  pluginmanager.h  qcptooltip.h  socketclient.h  sortfilterproxymodel.h  updatechecker.h
app/src/: ImuSetting.ui  curvecustomplot.cpp  dataloadercsv.cpp  filtertreeview.cpp  filterviewwidget.cpp  loaderviewwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  menuanimatwidget.cpp  mimedata.cpp  plotcursor.cpp  plotcurvecolor.cpp  plotdockerwidget.cpp  plotfft.cpp  plotwidget.cpp  pluginmanager.cpp  qcptooltip.cpp  qcustomplot.cpp  socketclient.cpp  sortfilterproxymodel.cpp  updatechecker.cpp
docs/: updatelist.xml
plugins/test/: CMakeLists.txt
plugins/test/include/: Plugin01_global.h  plugin01.h
plugins/test/src/: plugin01.cpp
plugins/test2/: CMakeLists.txt
plugins/test2/include/: Plugin02_global.h  PluginInterface.h  plugin02.h
plugins/test2/src/: plugin02.cpp
